syntax = "proto3";

package promotion;
option go_package = "./promotion";

import "google/protobuf/timestamp.proto";

message Empty {}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
}

message Promotion {
  string id = 1;
  string name = 2;
  string description = 3;
  double discount_percentage = 4;
  repeated string applicable_products = 5;
  repeated Product products = 6;
  google.protobuf.Timestamp start_date = 7;
  google.protobuf.Timestamp end_date = 8;
  bool is_active = 9;
}

message CreatePromotionRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double discount_percentage = 4;
  repeated string applicable_products = 5;
  google.protobuf.Timestamp start_date = 6;
  google.protobuf.Timestamp end_date = 7;
}

message DeletePromotionRequest {
  string id = 1;
}

message PromotionResponse {
  Promotion promotion = 1;
}

message GetPromotionsResponse {
  repeated Promotion promotions = 1;
}

service PromotionService {
  rpc CreatePromotion(CreatePromotionRequest) returns (PromotionResponse);
  rpc GetPromotions(Empty) returns (GetPromotionsResponse);
  rpc DeletePromotion(DeletePromotionRequest) returns (Empty);
}